[gd_scene load_steps=7 format=3 uid="uid://bhs1l4ntxg2pu"]

[ext_resource type="Script" uid="uid://duh3t3orp7qo" path="res://menus/title_menu.gd" id="1_5teed"]
[ext_resource type="Theme" uid="uid://f0ji6y1emjg3" path="res://menus/title_theme.tres" id="2_5teed"]
[ext_resource type="LabelSettings" uid="uid://di1rew7ng03wr" path="res://assets/fonts/title_label_settings.tres" id="2_70d47"]
[ext_resource type="LabelSettings" uid="uid://dvexdbnp2dfb3" path="res://assets/fonts/default_label_settings.tres" id="4_5teed"]
[ext_resource type="Script" uid="uid://cfhbv1mh5jgtw" path="res://menus/settings.gd" id="4_gfj2v"]
[ext_resource type="PackedScene" uid="uid://f6nb2q02gicb" path="res://star_field.tscn" id="6_waf02"]

[node name="TitleMenu" type="Node2D"]
script = ExtResource("1_5teed")

[node name="MainMenu" type="CenterContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_5teed")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
text = "Geo Arena"
label_settings = ExtResource("2_70d47")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_5teed")
text = "Play"

[node name="OptionsButton" type="Button" parent="MainMenu/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_5teed")
text = "Options
"

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_5teed")
text = "Quit
"

[node name="Settings" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 112.0
offset_top = 32.0
offset_right = 528.0
offset_bottom = 326.0
theme = ExtResource("2_5teed")
script = ExtResource("4_gfj2v")

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Settings"
label_settings = ExtResource("4_5teed")
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_5teed")
current_tab = 0

[node name="Game" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Video" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Audio" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Accessibility" type="VBoxContainer" parent="Settings/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="VSeparator2" type="VSeparator" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Apply" type="Button" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_5teed")
text = "Apply"

[node name="VSeparator" type="VSeparator" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Back" type="Button" parent="Settings/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_5teed")
text = "Back
"

[node name="StarField" parent="." instance=ExtResource("6_waf02")]
position = Vector2(650, 180)
